# projectx-rs

./: Cargo.toml  README.md
src/: error.rs  main.rs
src/core/: block.rs  blockchain.rs  encoding.rs  hasher.rs  mod.rs  state.rs  storage.rs  transaction.rs  validator.rs  vm.rs
src/crypto/: keypair.rs
src/network/: local_transport.rs  message.rs  mod.rs  rpc.rs  server.rs  transport.rs  tx_pool.rs
src/types/: address.rs  hash.rs  mod.rs
