[package]
name = "projectx-rs"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.40"
tokio = { version = "1.5", features = [
  "sync",
  "rt",
  "macros",
  "time",
  "rt-multi-thread",
] }
async-trait = "0.1.64"
rand = "0.8.3"
sha2 = "0.10.6"
p256 = { version = "0.12.0", features = ["pem"] }
